[gd_scene load_steps=14 format=2]

[ext_resource path="res://Instatiables/Monster.gd" type="Script" id=1]
[ext_resource path="res://Instatiables/StateManager.gd" type="Script" id=2]
[ext_resource path="res://Instatiables/Idle.gd" type="Script" id=3]
[ext_resource path="res://Instatiables/Fight.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/wolf.tres" type="SpriteFrames" id=5]

[sub_resource type="CircleShape2D" id=8]
radius = 24.0

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "raise_stats"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TileMap:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1, 1.6 ),
"transitions": PoolRealArray( 0.574349, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0155039, 0.0232558, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.24031, 0.24031, 0.24031, 1, 0.00195313, 0, 1, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Monster" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="TileMap" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 3, 3 )
frames = ExtResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
z_index = 1
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 16 )
z_index = 1
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/raise_stats = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 25
process_material = SubResource( 7 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 2 )
start_state = "Idle"

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="StateManager/Idle"]
one_shot = true

[node name="Fight" type="Node" parent="StateManager"]
script = ExtResource( 4 )

[node name="HP_bar" type="Control" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="ColorRect" parent="HP_bar"]
margin_left = 4.0
margin_top = -4.0
margin_right = 44.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( -168, 8 )
color = Color( 0, 0, 0, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame2" type="ColorRect" parent="HP_bar"]
margin_left = 5.0
margin_top = -3.0
margin_right = 43.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -168, 8 )
color = Color( 1, 1, 1, 0.117647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="ColorRect" parent="HP_bar"]
margin_left = 5.0
margin_top = -3.0
margin_right = 43.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -168, 8 )
color = Color( 0.0901961, 0.74902, 0.117647, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Monster_mouse_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="body_entered" from="Area2D" to="StateManager/Fight" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="StateManager/Fight" method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="StateManager/Idle/Timer" to="StateManager/Idle" method="_on_Timer_timeout"]
